--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,15 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+//    composeOptions {
+//        kotlinCompilerExtensionVersion = "1.4.0" // Or the latest version
+//    }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    buildFeatures {
+//        compose = true
+        viewBinding = true
     }
 }
 
@@ -53,4 +60,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+//    implementation 'androidx.compose.ui:ui'
+
 }
