--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,18 +25,23 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
-//    composeOptions {
-//        kotlinCompilerExtensionVersion = "1.4.0" // Or the latest version
-//    }
+
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.4" // ✅ MUST match Kotlin 1.9.10
+    }
+//    kotlinOptions {
+//        jvmTarget = '1.8'
+//    }
     buildFeatures {
-//        compose = true
+        compose = true
         viewBinding = true
+        dataBinding = true
     }
 }
 
@@ -50,17 +55,26 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+//    implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation "com.google.dagger:dagger:2.42"
-    kapt "com.google.dagger:dagger-compiler:2.42"
+//    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation "com.google.dagger:dagger:2.44.2"
+    kapt "com.google.dagger:dagger-compiler:2.44.2"
     implementation 'androidx.browser:browser:1.4.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-//    implementation 'androidx.compose.ui:ui'
+    implementation platform("androidx.compose:compose-bom:2023.03.00") // Or latest
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.material3:material3"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    debugImplementation "androidx.compose.ui:ui-tooling"
 
+
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
+    implementation "androidx.activity:activity-compose:1.7.2"
+
+    implementation("io.coil-kt:coil-compose:2.4.0")
 }
